# home-assistant-synology-manager

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.dev.yml  hacs.json  pyproject.toml
custom_components/synology_manager/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json  switch.py  synology_client.py  update.py
custom_components/synology_upgrades/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json  synology_client.py  update.py
docs/superpowers/plans/: 2026-05-26-synology-upgrades.md
docs/superpowers/specs/: 2026-05-26-synology-upgrades-design.md
tests/: conftest.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_switch.py  test_synology_client.py  test_update.py
tests/integration/: Dockerfile  docker-compose.synology.yml  push-update.sh  test_update_flow.py
