[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project]
name = "home-assistant-synology-upgrades"
version = "0.1.0"
description = "Home Assistant integration for Synology NAS upgrade management"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component>=0.13.333",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.synology_upgrades"]
